--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,35 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-projects {
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.project {
+  width: 300px;
+  margin: 10px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow: hidden; /* Добавлено для обрезания текста, выходящего за границы */
+}
+
+.project h3 {
+  margin-bottom: 10px;
+  color: #007bff;
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  word-wrap: break-word; /* Добавлено для переноса текста вниз, если он слишком длинный */
 }
